edit in hello world.yml file

--- a/.github/workflow/hello_world.yml
+++ b/.github/workflow/hello_world.yml
@@ -6,7 +6,7 @@ on:
   push: 
     branches: 
       - main
-  pull_requests:
+  pull_request:
     branches: 
       - main
   workflow_dispatch: 
@@ -19,7 +19,6 @@ jobs:
     steps: 
       - name: hello world 
         run: echo " hello world" 
-
 
   good_bay: 
     runs-on: ubuntu-latest
