Update workflow to trigger on push and pull request

--- a/.github/workflows/hello_world.yml
+++ b/.github/workflows/hello_world.yml
@@ -1,8 +1,15 @@
-name: hello world workflow 
+name: hello world with push and PR and manual event 
 
 
 
 on: 
+  push: 
+    branches: 
+      - main
+  pull_request:
+    branches: 
+      - main
+      
   workflow_dispatch: 
 
 
